src/components/QueryOutput/QueryOutput.scss
.react-autoql-response-content-container {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: inherit;
  font-size: 14px;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

.react-autoql-response-content-container.table {
  max-height: 100vh !important; // this safetynet forces progressive rendering
}

.react-autoql-suggestion-btn {
  padding: 6px 14px;
  background: transparent;
  border-radius: 4px;
  font-family: inherit;
  font-size: 12px;
  margin-bottom: 5px;
  outline: none !important;
  cursor: pointer;
  letter-spacing: 0.05em;
  transition: all 0.1s ease;
  /* border: 1px solid rgba(0, 0, 0, 0.15); */
  border-color: #e2e2e26e;
  color: inherit;
}
.react-autoql-suggestion-btn:hover {
  border-color: transparent;
  color: white;
  background: var(--react-autoql-accent-color);
}
.react-autoql-help-link-btn {
  padding: 6px 14px;
  background: transparent;
  border-radius: 5px;
  font-family: inherit;
  font-size: 12px;
  margin-top: 5px;
  outline: none !important;
  cursor: pointer;
  letter-spacing: 0.05em;
  transition: all 0.1s ease;
  border-color: #e2e2e26e;
  color: inherit;
}
.react-autoql-help-link-btn:hover {
  opacity: 0.7;
}
.react-autoql-help-link-icon {
  width: 15px;
  height: 15px;
  margin-bottom: -3px;
  margin-right: 3px;
}

.react-autoql-suggestion-message {
  height: 100%;
  width: 100%;
  word-break: break-word;
}
.react-autoql-suggestions-select {
  position: relative;
  display: inline-block;
  height: 30px;
  background: none;
  outline: none !important;
  border: 1px solid;
  font-family: inherit;
  letter-spacing: 0.05em;
  color: #28a8e0;
  cursor: pointer;
  font-size: inherit;
}
.no-columns-error-message {
  position: absolute;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  padding: 20px;
  font-size: 13px;

  .warning-icon {
    font-size: 22px;
    display: block;
    margin-bottom: -13px;
  }
  .eye-icon {
    vertical-align: bottom;
    line-height: 18px;
  }
}

/* safetynet */
.react-autoql-safety-net-selector-container {
  display: inline-block;
  position: relative;
}
.react-autoql-select-popup-container.safetynet-select {
  padding: 5px 0;
  letter-spacing: 0.03em;
  font-family: var(--react-autoql-font-family), sans-serif;

  .react-autoql-select-option {
    height: unset;
    font-size: 14px;
    line-height: 24px;
    padding: 0 15px;
  }
  .react-autoql-select-option:last-of-type {
    color: #d84830;
  }
}
.react-autoql-safety-net-query {
  text-align: center;
}
.react-autoql-safety-net-execute-btn {
  height: 38px;
  background: none;
  border-radius: 4px;
  margin-top: 24px;
  width: 100%;
  color: inherit;
  cursor: pointer;
  outline: none !important;
  border-color: #e2e2e26e;
  transition: all 0.2s ease;
}
.react-autoql-safety-net-execute-btn:hover {
  border-color: #28a8e0;
}
.react-autoql-execute-query-icon {
  font-size: 23px;
  vertical-align: bottom;
  line-height: 24px;

  span.react-autoql-icon svg {
    height: 19px;
    width: 19px;
    margin-top: 3px;
    margin-right: 4px;
    vertical-align: top;
    fill: var(--react-autoql-accent-color);
  }
}
.react-autoql-safetynet-select {
  position: relative;
  display: inline-block;
  height: 2em;
  background: none;
  outline: none !important;
  border: none;
  letter-spacing: 0.05em;
  font-family: inherit;
  font-size: inherit;
  margin: 0;
  padding: 0;
  border-radius: 0;
  border-bottom: 1px dashed;
  color: var(--react-autoql-accent-color);
}
.react-autoql-safety-net-delete-button {
  position: relative;
  cursor: pointer;
  margin-bottom: -2px;
}
.react-autoql-chart-tooltip {
  font-family: var(--react-autoql-font-family), sans-serif;
  letter-spacing: 0.04em;
  line-height: 22px;
  font-size: 13px;
  padding: 7px 15px;
  transition: all 0.2s ease !important;
  text-align: left !important;
  opacity: 1 !important;
  z-index: 99999 !important; /* necessary to show up on top of rc drawer */
}
.single-value-response {
  color: inherit;
  cursor: unset;
  &:hover {
    color: inherit;
  }
}
.single-value-response.with-drilldown:hover {
  color: inherit;
  text-decoration: underline;
  font-weight: 600;
  cursor: pointer;
}
.react-autoql-safety-net-container {
  width: 100%;
}
.react-autoql-safety-net-description {
  margin-bottom: 14px;
}

.context-menu {
  background: var(--react-autoql-background-color-primary);
  /* height: 100px; */
  width: 150px;
  padding: 10px 0;
}
.context-menu-list {
  list-style-type: none;
  width: 100%;
  margin: 0;
  padding: 0;
}
.context-menu-list li {
  color: var(--react-autoql-text-color-primary);
  width: 100%;
  height: 35px;
  line-height: 35px;
  padding: 0 20px;
  cursor: pointer;
}
.context-menu-list li:hover {
  background: var(--react-autoql-hover-color, rgba(0, 0, 0, 0.05));
}

